--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,9 @@
     <string name="app_name">android-smart-formatter</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="teste">tag</string>
-    <string name="outro">outra tag</string>
-    <string name="frase">a frase com a {teste} {teste} {teste} {teste} {outro}</string>
+    <string name="VolatileEnvironment">(Essa foi setada no strings)</string>
+    <string name="DiskEnvironment">(Essa foi setada no strings)</string>
+    <string name="StringsXMLEnvironment">(Essa foi setada no strings)</string>
+    <string name="InstanceEnvironment">(Essa foi setada no strings)</string>
+    <string name="frase">{VolatileEnvironment} - {DiskEnvironment} - {StringsXMLEnvironment} - {InstanceEnvironment}</string>
 </resources>
